Adding offer details.

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,12 @@ body {
 button{
   cursor: pointer;
 }
+.center{
+  display: flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.center ul li{
+  display: block !important;
+}
