Editing offers successfully.

--- a/src/app/offers/offer-details/offer-details.component.html
+++ b/src/app/offers/offer-details/offer-details.component.html
@@ -1,8 +1,5 @@
 <div class= "center">
-    <app-offer-item 
-    [offer]="offer">
-    </app-offer-item>
-
+    <app-offer-form></app-offer-form>
     
 </div>
 <h1 class="center">Candidates waiting approval</h1>
