--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,17 +1,23 @@
-<div>
-    <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-        <div>
-            <input type="text"
-                   placeholder="Email"
-                   formControlName="email">
-        </div>
-        <div>
-            <input type="password"
-                   placeholder="Password"
-                   formControlName="password">
-        </div>
-        <div>
-            <button type="submit">Login</button>
-        </div>
-    </form>
+
+<div class="container"> 
+    <h1 style="text-align: center;">Login Form</h1>
+    <div class="center">
+        <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+            <div>
+                <label>Email</label><br>
+                <input type="text"
+                       placeholder="Email"
+                       formControlName="email">
+            </div>
+            <div>
+                <label>Password</label><br>
+                <input type="password"
+                       placeholder="Password"
+                       formControlName="password">
+            </div>
+            <div>
+                <button type="submit">Login</button>
+            </div>
+        </form>
+    </div>
 </div>
