--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<ul>
+    <div *ngIf="user; else elseBlock">
+        <li><a routerLink="/books">Offers</a></li>
+        <li><a routerLink="/offers/create">Create offer</a></li>
+        <li><a (click)="logout()" style="cursor: pointer;">Logout</a></li>
+    </div>
+    <ng-template #elseBlock>
+        <li><a (click)="login()"  style="cursor: pointer;">Login</a></li>
+        <li><a routerLink="/auth/register" style="cursor: pointer;">Register</a></li>
+    </ng-template>
+  </ul>
