Showing if the user is approved. Owner can delete/edit offers

--- a/src/app/offers/offer-item/offer-item.component.css
+++ b/src/app/offers/offer-item/offer-item.component.css
@@ -31,3 +31,11 @@
   button{
     margin-top: 5px;
   }
+
+  .deleteBtn{
+    background-color: rgb(97, 4, 4) !important;
+  }
+
+  .approved{
+    color: rgb(2, 83, 2);
+  }
