--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <ul>
     <div *ngIf="user; else elseBlock">
-        <li><a routerLink="/books">Offers</a></li>
-        <li><a routerLink="/offers/create">Create offer</a></li>
+        <li><a routerLink="/offers">Offers</a></li>
+        <li *ngIf="user.role == 'organisation'"><a routerLink="/offers/create">Create offer</a></li>
         <li><a (click)="logout()" style="cursor: pointer;">Logout</a></li>
     </div>
     <ng-template #elseBlock>
-        <li><a (click)="login()"  style="cursor: pointer;">Login</a></li>
+        <li><a routerLink="/auth/login"  style="cursor: pointer;">Login</a></li>
         <li><a routerLink="/auth/register" style="cursor: pointer;">Register</a></li>
     </ng-template>
   </ul>
